Remove Deprecation Warning