@@ -166,7 +166,7 @@ public class PolygonsAlongLinesFeatureCollection extends GXTSimpleFeatureCollect
                     builder.add(attribute);
                 }
 
-                builder.add(new Integer(index));
+                builder.add(Integer.valueOf(index));
                 nextFeature = builder.buildFeature(buildID(typeName, ++featureID));
                 builder.reset();
                 index++;
